--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -2,11 +2,10 @@
   "extends": "../../tsconfig.build.json",
 
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./lib",
     "jsx": "react",
     "esModuleInterop": true
   },
-
   "include": [
     "src/**/*"
   ]
