--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@nextail/hooks",
+  "name": "@nextail/core",
   "version": "0.0.1",
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
-    "clean": "rimraf -rf ./dist",
+    "clean": "rimraf -rf ./lib",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
   },
