--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@nextail/utils",
+  "name": "@nextail/hooks",
   "version": "0.0.1",
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
-    "clean": "rimraf -rf ./dist",
+    "clean": "rimraf -rf ./lib",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
     "react": "~18.0.0"
   },
+
   "devDependencies": {
     "@types/react": "~18.0.0",
     "react": "~18.0.0",
