--- a/packages/hooks/tsconfig.build.json
+++ b/packages/hooks/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.build.json",
 
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./lib",
     "jsx": "react",
     "esModuleInterop": true
   },
