--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "@nextail/core",
+  "name": "@nextail/providers",
   "version": "0.0.1",
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
-    "clean": "rimraf -rf ./dist",
+    "clean": "rimraf -rf ./lib",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
     "react": "~18.0.0"
   },
-
   "devDependencies": {
     "@types/react": "~18.0.0",
     "react": "~18.0.0",
