--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,17 @@
 {
   "name": "@nextail/core",
   "version": "0.0.1",
+  "license": "MIT",
+  "private": false,
+  "author": "a-smiggle",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/a-smiggle/nextail.git",
+    "directory": "packages/core"
+  },
+  "files": [
+    "/lib"
+  ],
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
     "clean": "rimraf -rf ./lib",
@@ -8,13 +19,19 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
-    "react": "~18.0.0"
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
+    "react": "~18.0.0",
+    "tailwindcss": "^3.0.24"
   },
-
   "devDependencies": {
+    "@types/node": "~17.0.0",
     "@types/react": "~18.0.0",
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
     "react": "~18.0.0",
     "react-dom": "~18.0.0",
-    "rimraf": "~3.0.2"
+    "rimraf": "~3.0.2",
+    "tailwindcss": "^3.0.24"
   }
 }
