--- a/websites/landing-page/package.json
+++ b/websites/landing-page/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "~12.1.0",
     "react": "~18.0.0",
-    "react-dom": "~18.0.0"
+    "react-dom": "~18.0.0",
+    "@nextail/core": "0.0.1"
   },
   "devDependencies": {
     "@types/node": "~17.0.0",
