--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/providers",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -16,6 +16,7 @@
     "build": "pnpm run clean && pnpm run compile",
     "clean": "rimraf -rf ./lib",
     "compile": "tsc -p tsconfig.build.json",
+    "build-types": "tsc --noEmit --pretty",
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
