--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "baseUrl": ".",
     "paths": {
       "@nextail/core/*": ["packages/core/src/*"],
-      "@nextail/hooks/*": ["packages/hooks/src/*"],
       "@nextail/utils/*": ["packages/utils/src/*"],
-      "@nextail/utils/*": ["packages/providers/src/*"]
+      "@nextail/providers/*": ["packages/providers/src/*"]
     },
     "noEmit": true
   }
