--- a/websites/docs/package.json
+++ b/websites/docs/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "next": "~12.1.0",
     "react": "~18.0.0",
-    "react-dom": "~18.0.0"
+    "react-dom": "~18.0.0",
+    "@nextail/core": "0.1.0",
+    "@nextail/providers": "0.1.0",
+    "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "~17.0.0",
