--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/core",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "pnpm run clean && pnpm run compile",
+    "build-types": "tsc --noEmit --pretty",
     "clean": "rimraf -rf ./lib",
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
@@ -33,5 +34,8 @@
     "react-dom": "~18.0.0",
     "rimraf": "~3.0.2",
     "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "usehooks-ts": "^2.5.2"
   }
 }
