Update/Fix Structure
Remove Examples folder. They will be own repos.
Remove Media Folder.

a-smiggle

--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "description": "",
   "private": false,
   "workspaces": [
-    "examples/*",
     "packages/*",
     "websites/*"
   ],
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "setup": "rm -rf node_modules && rm -rf ./packages/*/node_modules && rm -rf ./websites/*/node_modules && rm -rf ./examples/*/node_modules && rm -f pnpm-lock.yaml && pnpm i",
+    "setup": "rm -rf node_modules && rm -rf ./packages/*/node_modules && rm -rf ./websites/*/node_modules && rm -f pnpm-lock.yaml && pnpm i",
     "build": "pnpm run clean && pnpm -r --filter ./packages run build && pnpm -r --filter ./websites run build",
     "clean": "rimraf packages/*/lib && rimraf websites/*/.next && rimraf examples/*/.next",
     "lint": "eslint --ext js,ts,tsx .",
