--- a/websites/landing-page/package.json
+++ b/websites/landing-page/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@nextail/landing-page",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start": "next start",
     "build-types": "tsc --noEmit --pretty",
     "clean": "rimraf .next out"
   },
@@ -12,8 +13,8 @@
     "next": "~12.1.0",
     "react": "~18.0.0",
     "react-dom": "~18.0.0",
-    "@nextail/core": "0.4.0",
-    "@nextail/providers": "0.1.0",
+    "@nextail/core": "*",
+    "@nextail/providers": "*",
     "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
