--- a/websites/docs/package.json
+++ b/websites/docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/docs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,8 +12,8 @@
     "next": "~12.1.0",
     "react": "~18.0.0",
     "react-dom": "~18.0.0",
-    "@nextail/core": "0.4.0",
-    "@nextail/providers": "0.1.0",
+    "@nextail/core": "*",
+    "@nextail/providers": "*",
     "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
