--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "paths": {
       "@nextail/core/*": ["packages/core/src/*"],
       "@nextail/utils/*": ["packages/utils/src/*"],
-      "@nextail/providers/*": ["packages/providers/src/*"]
+      "@nextail/providers/*": ["packages/providers/src/*"],
+      "@nextail/hooks/*": ["packages/hooks/src/*"],
+      "@nextail/*": ["packages/*/src"]
     },
     "noEmit": true
   }
