--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/core",
-  "version": "0.4.8",
+  "version": "0.4.9",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -19,6 +19,10 @@
     "compile": "tsc -p tsconfig.build.json",
     "prepublishOnly": "pnpm run build"
   },
+  "dependencies": {
+    "@nextail/hooks": "*",
+    "usehooks-ts": "^2.5.3"
+  },
   "peerDependencies": {
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
@@ -26,16 +30,13 @@
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "@types/node": "~17.0.0",
-    "@types/react": "~18.0.0",
-    "autoprefixer": "^10.4.5",
-    "postcss": "^8.4.12",
+    "@types/node": "~17.0.35",
+    "@types/react": "~18.0.9",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "react": "~18.0.0",
     "react-dom": "~18.0.0",
     "rimraf": "~3.0.2",
     "tailwindcss": "^3.0.24"
-  },
-  "dependencies": {
-    "usehooks-ts": "^2.5.2"
   }
 }
