--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "setup": "rm -rf node_modules && rm -rf ./packages/*/node_modules && rm -rf ./websites/*/node_modules && rm -f pnpm-lock.yaml && pnpm i",
-    "build": "pnpm run clean && pnpm -r --filter ./packages run build && pnpm -r --filter ./websites run build",
+    "build": "pnpm run setup && pnpm -r --filter ./packages run build && pnpm -r --filter ./websites run build",
     "clean": "rimraf packages/*/lib && rimraf websites/*/.next && rimraf examples/*/.next",
     "lint": "eslint --ext js,ts,tsx .",
     "lint_fix": "eslint --fix --ext js,ts,tsx ."
