--- a/websites/docs/package.json
+++ b/websites/docs/package.json
@@ -1,19 +1,22 @@
 {
   "name": "@nextail/docs",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start": "next start",
     "build-types": "tsc --noEmit --pretty",
     "clean": "rimraf .next out"
   },
   "dependencies": {
-    "next": "~12.1.0",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
     "@nextail/core": "*",
     "@nextail/providers": "*",
+    "@nextail/hooks": "*",
+    "next": "~12.1.0",
+    "prism-react-renderer": "^1.3.3",
+    "react": "~18.0.0",
+    "react-dom": "~18.0.0",
     "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
@@ -21,10 +24,10 @@
     "@types/react": "~18.0.7",
     "@types/react-dom": "~18.0.0",
     "autoprefixer": "^10.4.5",
+    "cssnano": "^5.1.7",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "typescript": "~4.6.2",
     "rimraf": "^3.0.2",
-    "cssnano": "^5.1.7"
+    "tailwindcss": "^3.0.24",
+    "typescript": "~4.6.2"
   }
 }
