--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["nextail"]
+  "cSpell.words": ["nextail", "pnpm", "tailwindcss"]
 }
