--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/hooks",
-  "version": "0.55.1",
+  "version": "0.56.0",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -20,13 +20,13 @@
     "prepublishOnly": "pnpm run build"
   },
   "peerDependencies": {
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "~18.0.0",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
-    "rimraf": "~3.0.2"
+    "@types/react": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rimraf": "^3.0.2"
   }
 }
