--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "lint_fix": "eslint --fix --ext js,ts,tsx ."
   },
   "devDependencies": {
-    "next": "~12.1.0",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.1.5",
+    "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-tailwindcss": "^3.5.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.6.2",
-    "typescript": "~4.6.0",
-    "rimraf": "^3.0.2"
+    "next": "~12.1.6",
+    "prettier": "^2.7.1",
+    "react": "~18.0.0",
+    "react-dom": "~18.0.0",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.6.4"
   }
 }
