--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/core",
-  "version": "0.10.4",
+  "version": "0.10.5",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -27,17 +27,17 @@
   "peerDependencies": {
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
-    "react": "~18.0.0",
+    "react": "^18.0.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/node": "~17.0.35",
-    "@types/react": "~18.0.9",
+    "@types/react": "^18.0.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
-    "rimraf": "~3.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.0.24"
   }
 }
