--- a/packages/providers/package.json
+++ b/packages/providers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/providers",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "license": "MIT",
   "private": false,
   "author": "a-smiggle",
@@ -23,13 +23,13 @@
     "@nextail/hooks": "*"
   },
   "peerDependencies": {
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/react": "~18.0.0",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
-    "rimraf": "~3.0.2"
+    "@types/react": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "rimraf": "^3.0.2"
   }
 }
