--- a/websites/landing-page/package.json
+++ b/websites/landing-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextail/landing-page",
-  "version": "0.5.3",
+  "version": "0.5.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "react-dom": "~18.0.0",
     "@nextail/core": "*",
     "@nextail/providers": "*",
+    "@nextail/hooks": "*",
     "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
