--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^12.2.0",
+    "eslint-config-next": "^12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
@@ -29,11 +29,11 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-tailwindcss": "^3.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "next": "~12.1.6",
+    "next": "^12.2.2",
     "prettier": "^2.7.1",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "~4.6.4"
+    "typescript": "~4.7.4"
   }
 }
