--- a/websites/docs/package.json
+++ b/websites/docs/package.json
@@ -12,16 +12,16 @@
     "@nextail/core": "*",
     "@nextail/providers": "*",
     "@nextail/hooks": "*",
-    "next": "~12.1.0",
+    "next": "^12.2.0",
     "prism-react-renderer": "^1.3.3",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "usehooks-ts": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "~17.0.0",
-    "@types/react": "~18.0.7",
-    "@types/react-dom": "~18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.5",
     "cssnano": "^5.1.7",
     "postcss": "^8.4.12",
