--- a/websites/landing-page/package.json
+++ b/websites/landing-page/package.json
@@ -9,9 +9,9 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
-    "next": "~12.1.0",
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0",
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@nextail/core": "*",
     "@nextail/providers": "*",
     "@nextail/hooks": "*",
@@ -19,8 +19,8 @@
   },
   "devDependencies": {
     "@types/node": "~17.0.0",
-    "@types/react": "~18.0.7",
-    "@types/react-dom": "~18.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
